# LocalRAG-Pro

./: .gitignore  Cargo.toml  README.md  index.html  package.json  tsconfig.json
src/: App.tsx  styles.css  tailwind.config.cjs
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
src/components/: Chat.tsx  Sidebar.tsx
