[package]
name = "localrag_pro"
version = "0.1.0"
authors = ["YourName <you@yourdomain.com>"]
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25", features = ["rt-multi-thread", "macros"] }
notify = "6.1"
walkdir = "2.3"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
# optional pure-Rust PDF attempt (we rely on pdftotext as preferred)
# lopdf = "0.27"
